修改为使用搜狐邮箱SMTP发送确认邮件，添加nodemailer依赖

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,8 @@ PORT=3000
 
 # 环境
 NODE_ENV=development
+
+# Resend API 密钥（用于发送邮件）
+# 获取方式：https://resend.com/api-keys
+# 注册 Resend 账号后在 API Keys 页面创建
+RESEND_API_KEY=re_your_api_key_here
