集成飞书多维表格API，支付成功后自动保存订单数据

--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,8 @@ PORT=3000
 # 环境
 NODE_ENV=development
 
-# Resend API 密钥（用于发送邮件）
-# 获取方式：https://resend.com/api-keys
-# 注册 Resend 账号后在 API Keys 页面创建
-RESEND_API_KEY=re_your_api_key_here
+# 飞书多维表格 API 配置（用于保存订单数据）
+# 获取方式：https://open.feishu.cn/app
+FEISHU_APP_ID=cli_a834914dcf6c500d
+FEISHU_APP_SECRET=LLweMTeb33fFvJ4pDec9LhHfEtswX1L1
+FEISHU_BASE_URL=https://open.feishu.cn/open-apis
