迁移到Next.js：添加Next.js框架支持，将静态文件移到public目录，迁移API路由

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,16 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Next.js
+.next/
+out/
+build/
+dist/
+
 # PM2
 .pm2/
 logs/
 *.log
+
+# Vercel
+.vercel
