--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "soundbox-story",
   "version": "1.0.0",
   "description": "声宝盒 - 定制语音故事",
-  "main": "index.js",
   "scripts": {
-    "dev": "vercel dev",
-    "build": "vercel build"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "nodemailer": "^6.9.7",
     "form-data": "^4.0.0",
     "busboy": "^1.6.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.12",
+    "@types/nodemailer": "^6.4.15"
   },
   "engines": {
     "node": ">=18.0.0"
