修复Vercel部署问题：移除package.json的忽略规则，让Vercel能识别Next.js项目

--- a/.vercelignore
+++ b/.vercelignore
@@ -5,11 +5,8 @@ __pycache__/
 *.pyo
 *.pyd
 
-# Node modules (server side)
+# Node modules
 node_modules/
-package.json
-package-lock.json
-server.js
 
 # Environment files
 .env
@@ -32,3 +29,6 @@ PROJECT_*.md
 
 # Large data files
 story.json
+
+# Scripts directory (测试脚本不需要部署)
+scripts/
