--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "nodemailer": "^6.9.7",
+    "busboy": "^1.6.0",
     "form-data": "^4.0.0",
-    "busboy": "^1.6.0"
+    "next": "^14.2.5",
+    "nodemailer": "^6.9.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.12",
-    "@types/nodemailer": "^6.4.15"
+    "@types/nodemailer": "^6.4.15",
+    "typescript": "5.9.3"
   },
   "engines": {
     "node": ">=18.0.0"
