添加管理员订单管理系统：订单列表查看和录音文件下载功能

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,9 @@ SMTP_USER=your-email@sohu.com
 # 3. 搜狐邮箱: 设置 -> 邮箱设置 -> SMTP服务 -> 生成授权码
 SMTP_PASS=your-smtp-password
 
+# 管理员密码（用于访问 /admin.html）
+ADMIN_PASSWORD=admin123
+
 # 服务器端口
 PORT=3000
 
