--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "busboy": "^1.6.0",
+    "dotenv": "^17.2.3",
     "form-data": "^4.0.0",
     "next": "^14.2.5",
     "nodemailer": "^6.9.7",
