--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^14.2.5",
     "nodemailer": "^6.9.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "resend": "^6.7.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.12",
