添加可配置的发件人邮箱和域名验证指南

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,20 @@
 # 注意：Resend 免费版每月可发送 3000 封邮件
 RESEND_API_KEY=re_your_api_key_here
 
+# 发件人邮箱地址（可选）
+# 格式：名称 <邮箱地址>
+# 例如：声宝盒 <noreply@66668888.cloud>
+# 
+# 重要：使用自定义域名前需要在 Resend 控制台验证域名
+# 1. 访问 https://resend.com/domains
+# 2. 点击 "Add Domain" 添加你的域名
+# 3. 按照提示添加 DNS 记录（SPF、DKIM 等）
+# 4. 验证完成后，填入下方
+# 
+# 如果不配置，将使用测试域名 onboarding@resend.dev
+# 注意：测试域名只能发送到 Resend 账号注册时使用的邮箱
+RESEND_FROM_EMAIL=声宝盒 <noreply@66668888.cloud>
+
 # 管理员密码（用于访问 /admin.html）
 ADMIN_PASSWORD=admin123
 
