--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,27 @@
-# 邮件服务配置（使用 Resend）
+# 邮件服务配置（使用 SMTP）
 # 请复制此文件为 .env 并填入真实的配置信息
 
-# Resend API Key
-# 获取方式：
-# 1. 访问 https://resend.com/
-# 2. 注册账号并登录
-# 3. 在 API Keys 页面创建新的 API Key
-# 4. 复制 API Key 并填入下方
-# 注意：Resend 免费版每月可发送 3000 封邮件
-RESEND_API_KEY=re_your_api_key_here
+# SMTP 服务器地址
+# 常用SMTP服务器:
+# - 搜狐: smtp.sohu.com (端口25)
+# - 网易: smtp.163.com (端口25或465)
+# - QQ邮箱: smtp.qq.com (端口587或465)
+# - Gmail: smtp.gmail.com (端口587)
+SMTP_HOST=smtp.sohu.com
 
-# 发件人邮箱地址（可选）
-# 格式：名称 <邮箱地址>
-# 例如：声宝盒 <noreply@66668888.cloud>
-# 
-# 重要：使用自定义域名前需要在 Resend 控制台验证域名
-# 1. 访问 https://resend.com/domains
-# 2. 点击 "Add Domain" 添加你的域名
-# 3. 按照提示添加 DNS 记录（SPF、DKIM 等）
-# 4. 验证完成后，填入下方
-# 
-# 如果不配置，将使用测试域名 onboarding@resend.dev
-# 注意：测试域名只能发送到 Resend 账号注册时使用的邮箱
-RESEND_FROM_EMAIL=声宝盒 <noreply@66668888.cloud>
+# SMTP 端口
+# 常用端口: 25, 465(SSL), 587(TLS)
+SMTP_PORT=25
+
+# SMTP 用户名(通常是你的邮箱地址)
+SMTP_USER=13001274087@sohu.com
+
+# SMTP 密码(不是邮箱登录密码,是SMTP授权码)
+# 如何获取授权码:
+# 1. 网易邮箱: 设置 -> POP3/SMTP/IMAP -> 开启SMTP服务 -> 生成授权码
+# 2. QQ邮箱: 设置 -> 账户 -> 开启SMTP服务 -> 生成授权码
+# 3. 搜狐邮箱: 设置 -> 邮箱设置 -> SMTP服务 -> 生成授权码
+SMTP_PASS=3RWJBEFLXTHK
 
 # 管理员密码（用于访问 /admin.html）
 ADMIN_PASSWORD=admin123
