支持SMTP端口465的SSL连接

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,8 @@ SMTP_HOST=smtp.sohu.com
 
 # SMTP 端口
 # 常用端口: 25, 465(SSL), 587(TLS)
-SMTP_PORT=25
+# 注意：Vercel 服务器阻止端口25，建议使用465或587
+SMTP_PORT=465
 
 # SMTP 用户名(通常是你的邮箱地址)
 SMTP_USER=13001274087@sohu.com
