feat: 集成故事生成API - 支付成功后自动生成故事
✨ 新增功能
- 创建故事生成API客户端模块 (lib/storyApi.ts)
- 支付成功后自动调用故事生成API
- 创建回调接口接收生成完成通知
- 添加故事API环境变量配置

📝 核心改动
- lib/storyApi.ts: 封装API调用逻辑
- app/api/payment-notify/route.ts: 集成故事生成调用
- app/api/story-callback/route.ts: 接收完成回调
- .env.example: 添加STORY_API_URL配置

📋 待完成步骤（见STORY_API_INTEGRATION.md）
- 需要在飞书表格添加字段
- 需要在lib/feishu.ts添加updateTaskStatus函数
- 需要在lib/email.ts添加sendStoryCompletedEmail函数
- 需要配置Vercel环境变量

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,16 @@ SMTP_USER=13001274087@sohu.com
 # 3. 搜狐邮箱: 设置 -> 邮箱设置 -> SMTP服务 -> 生成授权码
 SMTP_PASS=3RWJBEFLXTHK
 
+# ===== 故事生成 API 配置 =====
+# 算力机器上的故事生成服务地址
+# 例如: http://your-gpu-server:8000
+STORY_API_URL=http://localhost:8000
+
+# 当前网站的公开访问地址（用于回调）
+# 生产环境: https://story.66668888.cloud
+# 开发环境: http://localhost:3000
+NEXT_PUBLIC_URL=https://story.66668888.cloud
+
 # 管理员密码（用于访问 /admin.html）
 ADMIN_PASSWORD=admin123
 
