feat: 添加故事生成完成通知邮件功能
✨ 新增功能
- 添加 sendStoryCompletedEmail 函数
- 精美的邮件模板设计
- 包含下载链接和订单信息

📧 邮件内容
- 故事生成完成通知
- 一键下载按钮
- 订单详情展示
- 使用提示说明

🎨 邮件样式
- 渐变色头部
- 响应式布局
- 信息卡片设计
- 品牌化风格

现在所有集成代码已完成，可以进行端到端测试

--- a/.env.example
+++ b/.env.example
@@ -26,8 +26,9 @@ SMTP_PASS=3RWJBEFLXTHK
 
 # ===== 故事生成 API 配置 =====
 # 算力机器上的故事生成服务地址
-# 例如: http://your-gpu-server:8000
-STORY_API_URL=http://localhost:8000
+# CSDN GPU 端口映射格式: https://gpu-pod{实例ID}-{端口}.web.gpu.csdn.net
+# 例如: https://gpu-pod695f21981228d81fa9e89bc7-8080.web.gpu.csdn.net
+STORY_API_URL=https://gpu-pod你的实例ID-8080.web.gpu.csdn.net
 
 # 当前网站的公开访问地址（用于回调）
 # 生产环境: https://story.66668888.cloud
